# polypy

./: README.md  main.py  pyproject.toml
polypy/: circle_elements.py  constants.py  elements.py  main.py  main_circle.py  presentation.ipynb
