[tool.poetry]
name = "polypy"
version = "0.1.0"
description = ""
authors = ["codinEric"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
numpy = "^1.26.3"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
